@@ -9,7 +9,11 @@ CHANGES
 
 - Add IE support for cookie deletion. #994
 
-- Remove deprecated `WebSocketResponse.wait_closed` method
+- Remove deprecated `WebSocketResponse.wait_closed` method (BACKWARD
+  INCOMPATIBLE)
+
+- Remove deprecated `force` parameter for `ClientResponse.close`
+  method (BACKWARD INCOMPATIBLE)
 
 0.22.2 (07-23-2016)
 -------------------
